@@ -334,16 +334,14 @@ struct connected *
 if_lookup_linklocal (struct interface *ifp)
 {
 #ifdef HAVE_IPV6
-  listnode node;
+  struct listnode *node;
   struct connected *ifc;
 
   if (ifp == NULL)
     return NULL;
 
-  for (node = listhead (ifp->connected); node; node = nextnode (node))
+  LIST_LOOP (ifp->connected, ifc, node)
     {
-      ifc = getdata (node);
-
       if ((ifc->address->family == AF_INET6) &&
           (IN6_IS_ADDR_LINKLOCAL (&ifc->address->u.prefix6)))
         return ifc;
